--- a/src/app/Components/layout/layout.component.html
+++ b/src/app/Components/layout/layout.component.html
@@ -13,36 +13,10 @@
     <mat-sidenav #sidenav opened="true" mode="side" style="width: 200px;">
         <mat-nav-list>
 
-            <mat-list-item routerLink="/pages/dashboard">
-                <mat-icon mat-list-icon>dashboard</mat-icon>
-                <div mat-line>dashBoard</div>
+            <mat-list-item>
+                <mat-icon mat-list-icon></mat-icon>
+                <div>DashBoard</div>
             </mat-list-item>
-
-            <mat-list-item routerLink="/pages/usuarios">
-                <mat-icon mat-list-icon>group</mat-icon>
-                <div mat-line>Usuarios</div>
-            </mat-list-item>
-
-            <mat-list-item routerLink="/pages/productos">
-                <mat-icon mat-list-icon>collections_bookmark</mat-icon>
-                <div mat-line>Productos</div>
-            </mat-list-item>
-
-            <mat-list-item routerLink="/pages/venta">
-                <mat-icon mat-list-icon>currency_exchage</mat-icon>
-                <div mat-line>Venta</div>
-            </mat-list-item>
-
-            <mat-list-item routerLink="/pages/historial_venta">
-                <mat-icon mat-list-icon>edit_note</mat-icon>
-                <div mat-line>Historial Venta</div>
-            </mat-list-item>
-
-            <mat-list-item routerLink="/pages/reportes">
-                <mat-icon mat-list-icon>receipt</mat-icon>
-                <div mat-line>Reportes</div>
-            </mat-list-item>
-
 
 
 
@@ -50,9 +24,11 @@
 
     </mat-sidenav>
 
-    <mat-sidenav-content>
-        <div style="height: 90vh;">
+    <mat-sidenav-content style="height: 90;">
+        <div>
             <router-outlet></router-outlet>
         </div>
+
     </mat-sidenav-content>
+
 </mat-sidenav-container>
