--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<div class="body">
+
+    <mat-card class="loginCard">
+
+        <div>
+            <h2>Login</h2>
+        </div>
+
+        <mat-card-content style="padding-bottom: 15px;">
+
+            <form [formGroup]="formularioLogin"(ngSubmit)="iniciarSesion()">
+
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input formControlName="email" matInput autocomplete="off">
+                    <mat-icon matTextSuffix>mail</mat-icon>
+                </mat-form-field>
+
+            </form>
+
+
+        </mat-card-content>
+
+    </mat-card>
+</div>
