--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -16,6 +16,26 @@
                     <mat-icon matTextSuffix>mail</mat-icon>
                 </mat-form-field>
 
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Contraseña</mat-label>
+                    <input [type]=" ocultarPassword?'password':'text'"
+                    formControlName="password" matInput autocomplete="off">
+
+                    <button mat-icon-button matSuffix
+                    (click)="ocultarPassword = !ocultarPassword" type="button"
+                    >
+                    <mat-icon matTextSuffix>{{ocultarPassword?'visibility_off': 'visibility' }}</mat-icon> 
+                    </button>
+
+                    
+                </mat-form-field>
+
+                <button class="full-width" mat-raised-button color="primary" type="submit"
+                [disabled]="formularioLogin.invalid"
+                >
+                  <mat-icon matSuffix>login</mat-icon>
+                </button>
+
             </form>
 
 
