--- a/src/app/Components/layout/layout.component.html
+++ b/src/app/Components/layout/layout.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
 <mat-toolbar-row>
-    <h1>Sistema Venta</h1>
+    <h1>ferranova</h1>
 
     <button mat-icon-button (click)="sidenav.toggle();">
         <mat-icon>menu</mat-icon>
