--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -2,7 +2,7 @@
 
     <mat-card class="loginCard">
 
-        <div>
+        <div class="header">
             <h2>Login</h2>
         </div>
 
@@ -13,25 +13,26 @@
                 <mat-form-field class="full-width" appearance="outline">
                     <mat-label>Email</mat-label>
                     <input formControlName="email" matInput autocomplete="off">
-                    <mat-icon matTextSuffix>mail</mat-icon>
+                    <mat-icon matSuffix>mail</mat-icon>
                 </mat-form-field>
 
                 <mat-form-field class="full-width" appearance="outline">
                     <mat-label>Contraseña</mat-label>
-                    <input [type]=" ocultarPassword?'password':'text'"
-                    formControlName="password" matInput autocomplete="off">
+                    <input [type]="ocultarPassword?'password':'text'"
+                    formControlName=" password" matInput autocomplete="off">
 
                     <button mat-icon-button matSuffix
                     (click)="ocultarPassword = !ocultarPassword" type="button"
                     >
-                    <mat-icon matTextSuffix>{{ocultarPassword?'visibility_off': 'visibility' }}</mat-icon> 
+                    <mat-icon matSuffix>{{ocultarPassword?'visibility_off': 'visibility' }}</mat-icon> 
                     </button>
 
                     
                 </mat-form-field>
 
                 <button class="full-width" mat-raised-button color="primary" type="submit"
-                [disabled]="formularioLogin.invalid"
+                [disabled]="
+                formularioLogin.invalid"
                 >Ingresar
                   <mat-icon matSuffix>login</mat-icon>
                 </button>
