--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -18,8 +18,8 @@
 
                 <mat-form-field class="full-width" appearance="outline">
                     <mat-label>Contraseña</mat-label>
-                    <input [type]="ocultarPassword?'password':'text'"
-                    formControlName=" password" matInput autocomplete="off">
+                    <input [type]=" ocultarPassword?'password':'text'"
+                    formControlName="password" matInput autocomplete="off">
 
                     <button mat-icon-button matSuffix
                     (click)="ocultarPassword = !ocultarPassword" type="button"
@@ -31,8 +31,7 @@
                 </mat-form-field>
 
                 <button class="full-width" mat-raised-button color="primary" type="submit"
-                [disabled]="
-                formularioLogin.invalid"
+                [disabled]="formularioLogin.invalid"
                 >Ingresar
                   <mat-icon matSuffix>login</mat-icon>
                 </button>
