--- a/src/app/Components/layout/Pages/usuario/usuario.component.html
+++ b/src/app/Components/layout/Pages/usuario/usuario.component.html
@@ -1,4 +1,3 @@
-
 <h1 style="margin:20px 0px 0px 40px">Usuarios</h1>
 
 <mat-card style="margin:20px 40px 40px 40px">
@@ -9,5 +8,16 @@
         </button>
     </mat-card-title>
 
+    <mat-divider></mat-divider>
+
+    <mat-card-content class="dashboard-card-content">
+
+        <mat-form-field [appearance] = "'standard'">
+            <mat-label>Buscar</mat-label> 
+            <input mat-input (keyup)="aplicarFiltroTabla($event)" #input>           
+        </mat-form-field>
+       
+        
+    </mat-card-content>
 
 </mat-card>
